# gr-burst

./: AUTHORS  CMakeLists.txt  README
cmake/Modules/: burstConfig.cmake
docs/: README.burst
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: fec_burst_example.grc
grc/: CMakeLists.txt  CMakeLists.txt.orig  burst_arq.xml  burst_correlator_filter.xml  burst_cpdu_matlab_writer.xml  burst_decoder.xml  burst_deframer.xml  burst_framealign.xml  burst_framer.xml  burst_fsk_time_sync.xml  burst_interp_cpdu.xml  burst_length_detect.xml  burst_length_detect_c.xml  burst_packer.xml  burst_padder.xml  burst_preamble_correlator.xml  burst_preamble_insert.xml  burst_random_drop.xml  burst_randomizer.xml  burst_scheduler.xml  burst_scheduler2.xml  burst_slicer.xml  burst_symbol_mapper.xml  burst_symbol_mapper_msg.xml  burst_synchronizer.xml  burst_synchronizer_v2.xml  burst_synchronizer_v3.xml  burst_synchronizer_v4.xml  burst_tofpdu.xml  burst_unpacker.xml
include/burst/: CMakeLists.txt  api.h  correlator_filter.h  interp_cpdu.h  length_detect_c.h  synchronizer_v4.h
lib/: CMakeLists.txt  correlator_filter_impl.cc  correlator_filter_impl.h  interp_cpdu_impl.cc  interp_cpdu_impl.h  length_detect_c_impl.cc  length_detect_c_impl.h  qa_burst.cc  qa_burst.h  qa_helpers.cc  qa_helpers.h  qa_synchronizer_v4.cc  qa_synchronizer_v4.h  synchronizer_v4_impl.cc  synchronizer_v4_impl.h  test_burst.cc
matlab/: amplitudeBurstDetector.m  characterizeSynchronizerPerformance.m  convm.m  equalize.m  equalize_x2.m  genPreamble.m  gr_syncv4_test.m  gr_test2.m  preambleTest.m  prepareCmplxVecForWrite.m  qint.m  qpskBurstCFOCorrect.m  qpskBurstPhaseCorrect.m  qpskBurstTimingCorrect.m  qpskEVM.m  qpskFirstOrderPLL.m  qpskFirstOrderPLL_v2.m  qpskFirstOrderPLL_v3.m  qpskSyncBurst.m  read_gr_debug_data.m  rls.m  rls_impl.m  rxPulseShape.m  syncTest.m  testCorr.m  test_sync2.m  test_sync_kiran.m  test_thesis.m  weiner_filter_equalize.m
python/: CMakeLists.txt  __init__.py  arq.py  burst_scheduler.py  burst_scheduler2.py  cpdu_matlab_writer.py  deframer.py  framealign.py  framer.py  fsk_time_sync.py  length_detect.py  packer.py  padder.py  pdulib.py  preamble_correlator.py  preamble_insert.py  qa_synchronizer_v2.py  qa_synchronizer_v3.py  random_drop.py  randomizer.py  slicer.py  synchronizer.py  synchronizer_v2.py  synchronizer_v3.py  tofpdu.py  unpacker.py
swig/: CMakeLists.txt  burst_swig.i
